# NatMEG-utils

./: .gitignore  .gitmodules  DASHBOARD_FEATURES.md  DATABASE_README.md  ELECTRON_QUICKSTART.md  ERROR_FIXES_SUMMARY.md  README.md  TREE_IMPLEMENTATION_COMPLETE.md  UNIFIED_PIPELINE_README.md  add_hpi.py  alt_db_plan.md  bids_conversion.tsv  bids_viewer.html  bidsify.py  cli.py  compare_dashboard.py  compare_dashboard_qt.py  copy_results.json  copy_to_cerberos.py  database.py  database_integration.py  db_cli.py  db_update_plan.md  debug_set_params.py  debug_sync_rows.py  debug_tree.py  default_config.yml  demo_database.py  environment.txt  file_tracker.py  gui_text_editor.py  install.sh  integration_example.py  maxfilter.py  natmeg_pipeline.py  opm_preprocess.py  package-lock.json  package.json  participant_mapping.json  participant_mapping_example.csv  (+18 more)
electron/: IMPLEMENTATION.md  PYTHON_BUNDLING.md  README.md  app.js  app.js.backup  bids_viewer.html  build_python.sh  default_bids_config.yml  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  setup_python_env.sh
