[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seshat"
version = "0.1.0"
description = "NatMEG data processing pipeline and file tracking system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NatMEG Team", email = "natmeg@ki.se"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.3.0",
    "mne>=1.5.0",
    "mne-bids>=0.13.0",
    "h5py>=3.8.0",
    "nibabel>=5.0.0",
    "tqdm>=4.64.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "bids-validator>=1.14.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "click>=8.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.4.0",
]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "seaborn>=0.12.0",
]
all = [
    "seshat[gui,dev]",
]

[project.scripts]
seshat = "seshat.cli:main"

[project.urls]
Homepage = "https://github.com/natmeg/seshat"
Repository = "https://github.com/natmeg/seshat"

[tool.setuptools.packages.find]
where = ["."]
include = ["seshat*"]

[tool.setuptools.package-dir]
seshat = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.isort]
known-first-party = ["seshat"]